--- a/app/templates/configure/attrib.html
+++ b/app/templates/configure/attrib.html
@@ -28,6 +28,7 @@
         <label>
             <input type="radio"
                    name="value_type"
+                   id="type_number"
                    value="number"
                    {% if not current.binary %}checked{% endif %}>
             Number
@@ -35,14 +36,17 @@
         <label>
             <input type="radio"
                    name="value_type"
+                   id="type_binary"
                    value="binary"
                    {% if current.binary %}checked{% endif %}>
             True/False
         </label>
         <br>
-        <label for="enum">Enumerated Values:</label>
-        <textarea id="enum" name="enum" rows="5" cols="15">{{ '\n'.join(current.enum) }}</textarea>
-        <br>
+        <div id="enum-container">
+            <label for="enum">Enumerated Values:</label>
+            <textarea id="enum" name="enum" rows="5" cols="15">{{ '\n'.join(current.enum) }}</textarea>
+            <br>
+        </div>
         <div class="footer-buttons">
             <button type="submit" id="btn-save" name="save_changes">Save and Close</button>
             <button type="submit" id="btn-duplicate" name="make_duplicate">Save and Duplicate</button>
@@ -60,6 +64,28 @@
             {% else %}
                 $('#btn-delete').attr('disabled', 'disabled');
             {% endif %}
+
+            const enumTextbox = $('#enum');
+            const enumContainer = $('#enum-container');
+            const numberRadio = $('#type_number');
+            const binaryRadio = $('#type_binary');
+            function enableDisable() {
+                if (enumTextbox.val().trim() !== "") {
+                    numberRadio.prop('checked', true);
+                    binaryRadio.prop('disabled', true);
+                } else {
+                    binaryRadio.prop('disabled', false);
+                }
+                if (binaryRadio.prop('checked')) {
+                    enumContainer.css('display', 'none');
+                } else {
+                    enumContainer.css('display', 'block');
+                }
+            }
+            enumTextbox.on('input', enableDisable);
+            numberRadio.on('change', enableDisable);
+            binaryRadio.on('change', enableDisable);
+            enableDisable();
         });
     </script>
 {% endblock %}
